// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart - RTL Snapshot matches empty cart snapshot in Arabic RTL 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="rtl"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 text-center"
      data-testid="cart-empty-state"
    >
      <div
        class="w-24 h-24 bg-gray-100 rounded-full flex items-center justify-center mx-auto mb-6"
      >
        <svg
          aria-hidden="true"
          class="w-12 h-12 text-gray-400"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        cart.empty
      </h2>
      <p
        class="text-gray-500 mb-2"
      >
        cart.emptyMessage
      </p>
      <p
        class="text-sm text-gray-400 mb-8"
      >
        cart.browseMarketplace
      </p>
      <a
        class="btn-primary inline-flex items-center gap-2"
        href="/marketplace"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        cart.startShopping
      </a>
    </div>
  </div>
</div>
`;

exports[`Checkout Form - RTL Snapshot matches checkout address step snapshot in RTL 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="rtl"
  >
    <div
      class="p-6"
      data-testid="checkout-step-shipping"
    >
      <h2
        class="font-semibold text-gray-900 mb-4 flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Shipping Information
      </h2>
      <div
        class="grid grid-cols-1 sm:grid-cols-2 gap-4"
      >
        <div>
          <label>
            <span>
              Full Name *
            </span>
            <input
              data-testid="checkout-full-name-input"
              placeholder="Your full name"
              value="محمد أمين"
            />
          </label>
        </div>
        <div>
          <label>
            <span>
              Phone *
            </span>
            <input
              data-testid="checkout-phone-input"
              placeholder="+212 6XX XXX XXX"
              type="tel"
              value="+212600000000"
            />
          </label>
        </div>
        <div>
          <label>
            <span>
              City *
            </span>
            <input
              data-testid="checkout-city-input"
              placeholder="Casablanca"
              value="Rabat"
            />
          </label>
        </div>
        <div
          class="sm:col-span-2"
        >
          <label
            class="input-label"
            for="checkout-address"
          >
            Address *
          </label>
          <textarea
            class="input h-20 resize-none "
            data-testid="checkout-address-input"
            id="checkout-address"
            placeholder="الشارع، المبنى، الشقة..."
          >
            Hay Riyad, Rue 10
          </textarea>
        </div>
        <div
          class="sm:col-span-2"
        >
          <button
            data-testid="location-picker-mock"
            type="button"
          >
            pick location
          </button>
        </div>
        <div
          class="sm:col-span-2"
        >
          <label
            class="input-label"
            for="checkout-notes"
          >
            Notes (optional)
          </label>
          <textarea
            class="input h-16 resize-none"
            data-testid="checkout-notes-input"
            id="checkout-notes"
            placeholder="Delivery instructions, apartment number, etc."
          >
            اتصل قبل الوصول
          </textarea>
        </div>
      </div>
      <button
        class="btn-primary w-full mt-6"
        data-testid="checkout-continue-to-delivery"
        type="button"
      >
        Continue to Delivery Selection
      </button>
    </div>
  </div>
</div>
`;

exports[`Navbar - RTL vs LTR Snapshot matches Arabic RTL snapshot 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="rtl"
  >
    <header
      class="sticky top-0 z-50 bg-white dark:bg-gray-900 border-b border-gray-200 dark:border-gray-700 shadow-sm"
    >
      <nav
        aria-label="القائمة الرئيسية"
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 flex-shrink-0"
            href="/"
          >
            <div
              class="w-8 h-8 bg-gradient-to-br from-green-500 to-emerald-600 rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                ق
              </span>
            </div>
            <span
              class="font-extrabold text-xl text-gray-900 dark:text-white hidden sm:block"
            >
              قطوف
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-6"
          >
            <a
              class="text-sm font-medium transition-colors text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400"
              href="/"
            >
              الرئيسية
            </a>
            <a
              aria-current="page"
              class="text-sm font-medium transition-colors text-green-600 dark:text-green-400"
              href="/marketplace"
            >
              السوق
            </a>
            <a
              class="text-sm font-medium transition-colors text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400"
              href="/stores"
            >
              المتاجر
            </a>
          </div>
          <form
            class="hidden md:flex flex-1 max-w-xs mx-4"
          >
            <div
              class="relative w-full"
            >
              <svg
                aria-hidden="true"
                class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-400"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <input
                class="w-full pl-9 pr-4 py-2 text-sm rounded-xl border border-gray-300 dark:border-gray-600 bg-gray-50 dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
                placeholder="ابحث عن منتج..."
                type="search"
                value=""
              />
            </div>
          </form>
          <div
            class="flex items-center gap-2"
          >
            <button
              aria-label="Dark mode"
              class="p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
            <div
              class="hidden sm:flex items-center gap-1 text-xs font-medium"
            >
              <button
                class="px-2 py-1 rounded transition-colors bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-400"
              >
                AR
              </button>
              <button
                class="px-2 py-1 rounded transition-colors text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
              >
                FR
              </button>
              <button
                class="px-2 py-1 rounded transition-colors text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
              >
                EN
              </button>
            </div>
            <a
              aria-label="السلة"
              class="relative p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
              href="/cart"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 text-green-600"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.25 2.25a.75.75 0 0 0 0 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 0 0-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 0 0 0-1.5H5.378A2.25 2.25 0 0 1 7.5 15h11.218a.75.75 0 0 0 .674-.421 60.358 60.358 0 0 0 2.96-7.228.75.75 0 0 0-.525-.965A60.864 60.864 0 0 0 5.68 4.509l-.232-.867A1.875 1.875 0 0 0 3.636 2.25H2.25ZM3.75 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM16.5 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
                />
              </svg>
              <span
                class="absolute -top-1 -right-1 w-4 h-4 bg-green-600 text-white text-xs font-bold rounded-full flex items-center justify-center leading-none"
              >
                2
              </span>
            </a>
            <div
              class="hidden sm:flex items-center gap-2"
            >
              <a
                class="px-3 py-1.5 text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-green-600 dark:hover:text-green-400 rounded-lg transition-colors"
                href="/login"
              >
                تسجيل الدخول
              </a>
              <a
                class="px-3 py-1.5 text-sm font-medium text-white bg-green-600 hover:bg-green-700 rounded-lg transition-colors"
                href="/register"
              >
                إنشاء حساب
              </a>
            </div>
            <button
              aria-controls="mobile-navigation-menu"
              aria-expanded="false"
              aria-label="فتح القائمة"
              class="md:hidden p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Navbar - RTL vs LTR Snapshot matches French LTR snapshot 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="ltr"
  >
    <header
      class="sticky top-0 z-50 bg-white dark:bg-gray-900 border-b border-gray-200 dark:border-gray-700 shadow-sm"
    >
      <nav
        aria-label="القائمة الرئيسية"
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex items-center justify-between h-16"
        >
          <a
            class="flex items-center gap-2 flex-shrink-0"
            href="/"
          >
            <div
              class="w-8 h-8 bg-gradient-to-br from-green-500 to-emerald-600 rounded-lg flex items-center justify-center"
            >
              <span
                class="text-white font-bold text-sm"
              >
                ق
              </span>
            </div>
            <span
              class="font-extrabold text-xl text-gray-900 dark:text-white hidden sm:block"
            >
              قطوف
            </span>
          </a>
          <div
            class="hidden md:flex items-center gap-6"
          >
            <a
              class="text-sm font-medium transition-colors text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400"
              href="/"
            >
              الرئيسية
            </a>
            <a
              aria-current="page"
              class="text-sm font-medium transition-colors text-green-600 dark:text-green-400"
              href="/marketplace"
            >
              السوق
            </a>
            <a
              class="text-sm font-medium transition-colors text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400"
              href="/stores"
            >
              المتاجر
            </a>
          </div>
          <form
            class="hidden md:flex flex-1 max-w-xs mx-4"
          >
            <div
              class="relative w-full"
            >
              <svg
                aria-hidden="true"
                class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-400"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <input
                class="w-full pl-9 pr-4 py-2 text-sm rounded-xl border border-gray-300 dark:border-gray-600 bg-gray-50 dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
                placeholder="ابحث عن منتج..."
                type="search"
                value=""
              />
            </div>
          </form>
          <div
            class="flex items-center gap-2"
          >
            <button
              aria-label="Dark mode"
              class="p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
            <div
              class="hidden sm:flex items-center gap-1 text-xs font-medium"
            >
              <button
                class="px-2 py-1 rounded transition-colors text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
              >
                AR
              </button>
              <button
                class="px-2 py-1 rounded transition-colors bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-400"
              >
                FR
              </button>
              <button
                class="px-2 py-1 rounded transition-colors text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
              >
                EN
              </button>
            </div>
            <a
              aria-label="السلة"
              class="relative p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
              href="/cart"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 text-green-600"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.25 2.25a.75.75 0 0 0 0 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 0 0-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 0 0 0-1.5H5.378A2.25 2.25 0 0 1 7.5 15h11.218a.75.75 0 0 0 .674-.421 60.358 60.358 0 0 0 2.96-7.228.75.75 0 0 0-.525-.965A60.864 60.864 0 0 0 5.68 4.509l-.232-.867A1.875 1.875 0 0 0 3.636 2.25H2.25ZM3.75 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM16.5 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z"
                />
              </svg>
              <span
                class="absolute -top-1 -right-1 w-4 h-4 bg-green-600 text-white text-xs font-bold rounded-full flex items-center justify-center leading-none"
              >
                2
              </span>
            </a>
            <div
              class="hidden sm:flex items-center gap-2"
            >
              <a
                class="px-3 py-1.5 text-sm font-medium text-gray-700 dark:text-gray-200 hover:text-green-600 dark:hover:text-green-400 rounded-lg transition-colors"
                href="/login"
              >
                تسجيل الدخول
              </a>
              <a
                class="px-3 py-1.5 text-sm font-medium text-white bg-green-600 hover:bg-green-700 rounded-lg transition-colors"
                href="/register"
              >
                إنشاء حساب
              </a>
            </div>
            <button
              aria-controls="mobile-navigation-menu"
              aria-expanded="false"
              aria-label="فتح القائمة"
              class="md:hidden p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`OrderCard - RTL Snapshot matches order card Arabic RTL snapshot 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="rtl"
  >
    <div
      class="overflow-hidden border transition-all duration-300 hover:shadow-lg border-gray-200 bg-white"
    >
      <div
        class="px-4 sm:px-6 py-3 border-b border-gray-100 flex items-center justify-between"
      >
        <div
          class="flex items-center gap-3"
        >
          <button
            aria-label="Select order ORD-2026-0001"
            class="w-5 h-5 rounded border-2 flex items-center justify-center flex-shrink-0 transition-colors border-gray-300 hover:border-green-400"
          />
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-8 h-8 rounded-full flex items-center justify-center bg-emerald-100 text-emerald-700"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <div>
              <span
                class="text-sm font-semibold text-emerald-700"
              >
                تم التوصيل
              </span>
              <p
                class="text-xs text-gray-400"
              >
                May 20
              </p>
            </div>
          </div>
        </div>
        <div
          class="text-right"
        >
          <p
            class="text-lg font-bold text-gray-900"
          >
            MAD 300,00
          </p>
        </div>
      </div>
      <div
        class="px-4 sm:px-6 py-2 bg-gray-50"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex-1 h-2 bg-gray-200 rounded-full overflow-hidden"
          >
            <div
              class="h-full rounded-full transition-all duration-700 ease-out"
              style="width: 100%; background-color: rgb(16, 185, 129);"
            />
          </div>
          <span
            class="text-xs font-medium text-gray-500 whitespace-nowrap"
          >
            {{progress}}%
          </span>
        </div>
      </div>
      <div
        class="px-4 sm:px-6 py-4"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <button
            aria-label="Click to copy ORD-2026-0001"
            class="inline-flex items-center gap-1.5 text-sm font-mono font-medium text-gray-700 hover:text-green-600 transition-colors"
            dir="ltr"
            title="Click to copy"
          >
            ORD-2026-0001
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5A3.375 3.375 0 0 0 6.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0 0 15 2.25h-1.5a2.251 2.251 0 0 0-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 0 0-9-9Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-sm text-gray-500 mb-3"
        >
          Atlas Farm
        </p>
        <div
          class="flex items-center gap-2 mb-3"
        >
          <div
            class="relative group"
          >
            <div
              class="w-12 h-12 rounded-lg overflow-hidden bg-gray-100 border border-gray-200"
            >
              <img
                alt="طماطم"
                class="w-full h-full object-cover"
                loading="lazy"
                src="https://example.com/p1.jpg"
              />
            </div>
            <span
              class="absolute -top-1 -right-1 w-4 h-4 bg-gray-800 text-white text-[9px] font-bold rounded-full flex items-center justify-center"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="flex items-start gap-2 text-xs text-gray-500 mb-3"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4 flex-shrink-0 mt-0.5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
            <path
              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span>
            Hay Riyad, Rabat
          </span>
        </div>
        <div
          class="flex items-start gap-2 text-xs text-indigo-700 mb-3 bg-indigo-50 rounded-lg p-3"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4 flex-shrink-0 mt-0.5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span>
            موعد التسليم: 
            ١٥ مايو ٢٠٢٦
             • 
            10:00 - 12:00
          </span>
        </div>
        <div
          class="flex flex-wrap gap-2 pt-3 border-t border-gray-100"
        >
          <button
            class="inline-flex items-center gap-1.5 px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-700 hover:bg-gray-200 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="w-4 h-4"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Details
          </button>
          <button
            class="inline-flex items-center gap-1.5 px-3 py-2 rounded-lg text-sm font-medium bg-blue-50 text-blue-700 hover:bg-blue-100 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="w-4 h-4"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Invoice
          </button>
          <button
            class="inline-flex items-center gap-1.5 px-4 py-2.5 rounded-xl text-sm font-semibold bg-green-600 text-white hover:bg-green-700 transition-colors shadow-sm shadow-green-600/20"
          >
            <svg
              aria-hidden="true"
              class="w-4 h-4"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Re-order
          </button>
          <button
            class="inline-flex items-center gap-1.5 px-3 py-2 rounded-lg text-sm font-medium bg-yellow-500 text-white hover:bg-yellow-600 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="w-4 h-4"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Review
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard - RTL Snapshot matches ProductCard Arabic RTL snapshot 1`] = `
<div>
  <div
    data-testid="direction-root"
    dir="rtl"
  >
    <div
      class="group block cursor-pointer"
      data-testid="product-card"
      role="link"
      tabindex="0"
    >
      <div
        class="bg-white rounded-2xl overflow-hidden border border-gray-100 shadow-sm hover:shadow-xl transition-all duration-300 hover:-translate-y-1"
      >
        <div
          class="relative aspect-[4/3] overflow-hidden bg-gray-100"
        >
          <img
            alt="طماطم طازجة"
            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"
            loading="lazy"
            src="https://example.com/tomato.jpg"
          />
          <div
            class="absolute top-3 left-3"
          >
            <span
              class="inline-flex items-center px-2.5 py-1 rounded-lg bg-white/90 backdrop-blur-sm text-xs font-semibold text-gray-700 capitalize shadow-sm"
            >
              vegetables
            </span>
          </div>
          <div
            class="absolute top-3 right-3 flex flex-col gap-2"
          >
            <button
              aria-label="إضافة إلى المفضلة"
              aria-pressed="false"
              class="w-9 h-9 bg-white/90 backdrop-blur-sm rounded-full flex items-center justify-center shadow-sm hover:scale-110 transition-all"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 text-gray-600 hover:text-red-500"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <button
            aria-label="إضافة طماطم طازجة إلى السلة"
            class="absolute bottom-3 right-3 w-10 h-10 bg-green-500 hover:bg-green-600 text-white rounded-full flex items-center justify-center shadow-lg shadow-green-500/30 hover:scale-110 transition-all"
            data-testid="add-to-cart-btn"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-4"
        >
          <div
            class="mb-2"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="w-6 h-6 rounded-full bg-gradient-to-br from-green-500 to-emerald-600 flex items-center justify-center flex-shrink-0"
              >
                <span
                  class="text-white text-[10px] font-bold"
                >
                  A
                  V
                </span>
              </div>
              <span
                class="text-xs text-gray-500 truncate"
              >
                Atlas Farm
              </span>
              <span
                class="text-gray-300"
              >
                •
              </span>
              <svg
                aria-hidden="true"
                class="w-3 h-3 text-gray-400 flex-shrink-0"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
                <path
                  d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-xs text-gray-400 truncate"
              >
                Casablanca
              </span>
              <span
                class="text-xs text-green-600 font-medium flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.5 12.75 6 6 9-13.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
                Verified Farmer
              </span>
            </div>
            <div
              class="mt-1 flex items-center justify-between gap-2"
            >
              <span
                class="text-[11px] text-amber-700 bg-amber-50 border border-amber-200 rounded-full px-2 py-0.5 inline-flex items-center gap-1"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
                بيانات التواصل تظهر بعد تأكيد الطلب
              </span>
              <a
                class="text-[11px] text-green-700 hover:text-green-800 font-medium"
                href="/vendor/public/vendor-1"
              >
                عرض البائع
              </a>
            </div>
          </div>
          <h3
            class="font-semibold text-gray-900 line-clamp-2 mb-2 group-hover:text-green-600 transition-colors"
          >
            طماطم طازجة
          </h3>
          <p
            class="text-sm text-gray-500 line-clamp-2 mb-3"
          >
            Fresh tomato from local farms
          </p>
          <div
            class="flex items-center gap-1 mb-3"
          >
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-200"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-200"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-200"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-200"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="w-3.5 h-3.5 text-gray-200"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="text-xs text-gray-400 ml-1"
            >
              بدون تقييم
            </span>
          </div>
          <div
            class="flex items-end justify-between pt-3 border-t border-gray-100"
          >
            <div>
              <div
                class="flex items-baseline gap-1"
              >
                <span
                  aria-label="السعر: 12.5 درهم"
                  class="text-xl font-bold text-gray-900"
                >
                  MAD 12,50
                </span>
                <span
                  class="text-sm text-gray-400"
                >
                  /
                  kg
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
